--- a/sodasV.html
+++ b/sodasV.html
@@ -84,114 +84,114 @@
     
       <div class="container-items">
         <div class="item">
-          <div class="carousel">
+          <div class="carousel"> <!-- Carrusel de imágenes -->
             <figure>
-              <img src="Imagenes/sprite.jpg" alt="producto" class="active" />
-              <img src="Imagenes/dsprite.png" alt="producto" />
+              <img src="Imagenes/sprite.jpg" alt="producto" class="active" /> <!-- Imagen del producto (primera imagen) con clase "active" para mostrarla por defecto -->
+              <img src="Imagenes/dsprite.png" alt="producto" /> <!-- Segunda imagen del producto "descripcion" -->
             </figure>
-            <div class="arrow left" onclick="prevSlide(0)">&#10094;</div>
-            <div class="arrow right" onclick="nextSlide(0)">&#10095;</div>
+            <div class="arrow left" onclick="prevSlide(0)">&#10094;</div> <!-- Flecha izquierda para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
+            <div class="arrow right" onclick="nextSlide(0)">&#10095;</div> <!-- Flecha derecha para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
           </div>
-          <div class="stars">
+          <div class="stars"> <!-- Contenedor para mostrar la calificación del producto mediante estrellas -->
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
           </div>
-          <div class="info-product">
-            <h2>Sprite</h2>
-            <p class="price">$18</p>
+          <div class="info-product"> <!-- Contenedor para la información del producto -->
+            <h2>Sprite</h2> <!-- Nombre del producto 'Sprite' -->
+            <p class="price">$18</p> <!-- Precio del producto -->
             <button class="btn-add-cart">Añadir al carrito</button>
           </div>
         </div>
   
         <div class="item">
-          <div class="carousel">
+          <div class="carousel"> <!-- Carrusel de imágenes -->
             <figure>
-              <img src="Imagenes/pepsi.jpg" alt="producto" class="active" />
-              <img src="Imagenes/dspepsi.png" alt="producto" />
+              <img src="Imagenes/pepsi.jpg" alt="producto" class="active" /> <!-- Imagen del producto (primera imagen) con clase "active" para mostrarla por defecto -->
+              <img src="Imagenes/dspepsi.png" alt="producto" /> <!-- Segunda imagen del producto "descripcion" -->
             </figure>
-            <div class="arrow left" onclick="prevSlide(1)">&#10094;</div>
-            <div class="arrow right" onclick="nextSlide(1)">&#10095;</div>
+            <div class="arrow left" onclick="prevSlide(1)">&#10094;</div> <!-- Flecha izquierda para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
+            <div class="arrow right" onclick="nextSlide(1)">&#10095;</div> <!-- Flecha derecha para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
           </div>
-          <div class="stars">
+          <div class="stars"> <!-- Contenedor para mostrar la calificación del producto mediante estrellas -->
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-regular fa-star" aria-hidden="true"></i>
             <i class="fa-regular fa-star" aria-hidden="true"></i>
             <i class="fa-regular fa-star" aria-hidden="true"></i>
             <i class="fa-regular fa-star" aria-hidden="true"></i>
           </div>
-          <div class="info-product">
-            <h2>Pepsi</h2>
-            <p class="price">$17</p>
+          <div class="info-product"> <!-- Contenedor para la información del producto -->
+            <h2>Pepsi</h2> <!-- Nombre del producto 'Pepsi' -->
+            <p class="price">$17</p> <!-- Precio del producto -->
             <button class="btn-add-cart">Añadir al carrito</button>
           </div>
         </div>
   
         <div class="item">
-          <div class="carousel">
+          <div class="carousel"> <!-- Carrusel de imágenes -->
             <figure>
-              <img src="Imagenes/fuze.jpg" alt="producto" class="active" />
-              <img src="Imagenes/dsfuzetea.png" alt="producto" />
+              <img src="Imagenes/fuze.jpg" alt="producto" class="active" /> <!-- Imagen del producto (primera imagen) con clase "active" para mostrarla por defecto -->
+              <img src="Imagenes/dsfuzetea.png" alt="producto" /> <!-- Segunda imagen del producto "descripcion" -->
             </figure>
-            <div class="arrow left" onclick="prevSlide(2)">&#10094;</div>
-            <div class="arrow right" onclick="nextSlide(2)">&#10095;</div>
+            <div class="arrow left" onclick="prevSlide(2)">&#10094;</div> <!-- Flecha izquierda para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
+            <div class="arrow right" onclick="nextSlide(2)">&#10095;</div> <!-- Flecha derecha para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
           </div>
-          <div class="stars">
+          <div class="stars"> <!-- Contenedor para mostrar la calificación del producto mediante estrellas -->
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
           </div>
-          <div class="info-product">
-            <h2>Fuzetea</h2>
-            <p class="price">$20</p>
+          <div class="info-product"> <!-- Contenedor para la información del producto -->
+            <h2>Fuzetea</h2> <!-- Nombre del producto 'Fuzetea' -->
+            <p class="price">$20</p> <!-- Precio del producto -->
             <button class="btn-add-cart">Añadir al carrito</button>
           </div>
         </div>
         <div class="item">
-          <div class="carousel">
+          <div class="carousel"> <!-- Carrusel de imágenes -->
             <figure>
-              <img src="Imagenes/drpp.jpg" alt="producto" class="active" />
-              <img src="Imagenes/dsdrpp.png" alt="producto" />
+              <img src="Imagenes/drpp.jpg" alt="producto" class="active" /> <!-- Imagen del producto (primera imagen) con clase "active" para mostrarla por defecto -->
+              <img src="Imagenes/dsdrpp.png" alt="producto" /> <!-- Segunda imagen del producto "descripcion" -->
             </figure>
-            <div class="arrow left" onclick="prevSlide(3)">&#10094;</div>
-            <div class="arrow right" onclick="nextSlide(3)">&#10095;</div>
+            <div class="arrow left" onclick="prevSlide(3)">&#10094;</div> <!-- Flecha izquierda para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
+            <div class="arrow right" onclick="nextSlide(3)">&#10095;</div> <!-- Flecha derecha para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
           </div>
-          <div class="stars">
+          <div class="stars"> <!-- Contenedor para mostrar la calificación del producto mediante estrellas -->
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-regular fa-star" aria-hidden="true"></i>
             <i class="fa-regular fa-star" aria-hidden="true"></i>
             <i class="fa-regular fa-star" aria-hidden="true"></i>
             <i class="fa-regular fa-star" aria-hidden="true"></i>
           </div>
-          <div class="info-product">
-            <h2>Dr. Peper</h2>
-            <p class="price">$19</p>
+          <div class="info-product"> <!-- Contenedor para la información del producto -->
+            <h2>Dr. Peper</h2> <!-- Nombre del producto 'Dr. Pepper' -->
+            <p class="price">$19</p> <!-- Precio del producto -->
             <button class="btn-add-cart">Añadir al carrito</button>
           </div>
         </div>
         <div class="item">
-          <div class="carousel">
+          <div class="carousel"> <!-- Carrusel de imágenes -->
             <figure>
-              <img src="Imagenes/cocacola.png" alt="producto" class="active" />
-              <img src="Imagenes/dscocacola.png" alt="producto" />
+              <img src="Imagenes/cocacola.png" alt="producto" class="active" /> <!-- Imagen del producto (primera imagen) con clase "active" para mostrarla por defecto -->
+              <img src="Imagenes/dscocacola.png" alt="producto" /> <!-- Segunda imagen del producto "descripcion" -->
             </figure>
-            <div class="arrow left" onclick="prevSlide(4)">&#10094;</div>
-            <div class="arrow right" onclick="nextSlide(4)">&#10095;</div>
+            <div class="arrow left" onclick="prevSlide(4)">&#10094;</div> <!-- Flecha izquierda para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
+            <div class="arrow right" onclick="nextSlide(4)">&#10095;</div> <!-- Flecha derecha para el carrusel, al hacer clic se llama a la función prevSlide(0) -->
           </div>
-          <div class="stars">
+          <div class="stars"> <!-- Contenedor para mostrar la calificación del producto mediante estrellas -->
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
             <i class="fa-solid fa-star" aria-hidden="true"></i>
           </div>
-          <div class="info-product">
-            <h2>CocaCola</h2>
-            <p class="price">$17</p>
+          <div class="info-product"> <!-- Contenedor para la información del producto -->
+            <h2>CocaCola</h2> <!-- Nombre del producto 'Cocacola' -->
+            <p class="price">$17</p> <!-- Precio del producto -->
             <button class="btn-add-cart">Añadir al carrito</button>
           </div>
         </div>
