--- a/chuchesV.html
+++ b/chuchesV.html
@@ -8,9 +8,15 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="Imagenes/logo.jpg" type="image/png">
     <link rel="stylesheet" href="Estilos2.css">
+    <meta name " autor " content " Dulce Arredondo & Daniela Reyes ">
+    <meta " descripcion " content " Una tienda que ofrece productos como diferentes papas, sodas y chuches ">
+    <meta " keywords " content " palabras clave ">
+    <!--- certificado digital---->
     <title>Tiendita</title>
 </head>
 <header>
+  
+  
   <div class="content"></div> <!-- Contenido principal de la página -->
   <div class="mantain-coiner"> <!-- Contenedor para el encabezado fijo -->
     <header class="fixed-header"> <!-- Encabezado fijo -->
@@ -20,9 +26,6 @@
             <img src="Imagenes/logo.jfif" alt="Nombre de tu empresa">
 
           </div>
-
-
-
           <i class="fa-solid fa-bars" aria-hidden="true"></i> <!-- Icono de barras para el menú de navegación -->
 
           <ul class="menu"> <!-- Lista de elementos del menú de navegación -->
