--- a/sodasV.html
+++ b/sodasV.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="Estilos2.css">
   <meta name " autor " content " Dulce Arredondo & Daniela Reyes ">
     <meta " descripcion " content " Una tienda que ofrece productos como diferentes papas, sodas y chuches ">
-    <meta " keywords " content " palabras clave ">
+    <meta " keywords " content " chuches ">
     <!--- certificado digital---->
   <title>Tiendita</title>
 </head>
