--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name " autor " content " Dulce Arredondo & Daniela Reyes ">
     <meta " descripcion " content " Una tienda que ofrece productos como diferentes papas, sodas y chuches ">
-    <meta " keywords " content " palabras clave ">
+    <meta " keywords " content " chuches ">
     <!--- certificado digital---->
   <title>Tiendita</title>
   <link rel="stylesheet" href="Estilos2.css">
