--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><!---->
   <meta name " autor " content " Dulce Arredondo & Daniela Reyes ">
     <meta " descripcion " content " Una tienda que ofrece productos como diferentes papas, sodas y chuches ">
     <meta " keywords " content " chuches ">
