--- a/chipsV.html
+++ b/chipsV.html
@@ -136,7 +136,7 @@
               <div class="info-product"> <!-- Contenedor para la información del producto -->
                 <h2>Doritos</h2> <!-- Nombre del producto 'Doritos' -->
                 <p class="price">$19</p> <!-- Precio del producto -->
-                <button class="btn-add-cart">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button> <!-- Botón para añadir el producto al carrito -->
               </div>
             </div>
       
@@ -159,7 +159,7 @@
               <div class="info-product"> <!-- Contenedor para la información del producto -->
                 <h2>Chips</h2> <!-- Nombre del producto 'Chips' -->
                 <p class="price">$18</p> <!-- Precio del producto -->
-                <button class="btn-add-cart">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button> <!-- Botón para añadir el producto al carrito -->
               </div>
             </div>
             <div class="item">
@@ -181,7 +181,7 @@
               <div class="info-product"> <!-- Contenedor para la información del producto -->
                 <h2>Takis</h2> <!-- Nombre del producto ''Takis -->
                 <p class="price">$19</p> <!-- Precio del producto -->
-                <button class="btn-add-cart">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button> <!-- Botón para añadir el producto al carrito -->
               </div>
             </div>
             <div class="item">
@@ -203,7 +203,7 @@
               <div class="info-product"> <!-- Contenedor para la información del producto -->
                 <h2>Sabritas</h2> <!-- Nombre del producto 'Sabritas' -->
                 <p class="price">$20</p> <!-- Precio del producto -->
-                <button class="btn-add-cart">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button> <!-- Botón para añadir el producto al carrito -->
               </div>
             </div>
           </div>
@@ -213,16 +213,17 @@
 </body>
 <br>
 <br>
-<footer class="footer" id="mas">
-  <div class="container container-footer">
-    <div class="menu-footer">
-      <div class="contact-info">
+<footer class="footer" id="mas"> <!-- Footer de la página con clase "footer" y identificador "mas" -->
+  <div class="container container-footer"> <!-- Contenedor principal del footer con clase "container-footer" -->
+    <div class="menu-footer"> <!-- Menú del footer -->
+      <div class="contact-info"> <!-- Información de contacto -->
         <p class="title-footer">Información de Contacto</p>
         <ul>
           <li> Dirección:Av. Adolfo López Mateos #1801 Ote. Fracc. Bona Gens, C.P. 20255 Aguascalientes, Ags., México </li>
           
         </ul>
         <div class="social-icons">
+          <!-- Íconos de redes sociales -->
           <span class="facebook">
             <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
           </span>
