--- a/sodasV.html
+++ b/sodasV.html
@@ -109,7 +109,7 @@
           <div class="info-product"> <!-- Contenedor para la información del producto -->
             <h2>Sprite</h2> <!-- Nombre del producto 'Sprite' -->
             <p class="price">$18</p> <!-- Precio del producto -->
-            <button class="btn-add-cart">Añadir al carrito</button>
+            <button class="btn-add-cart">Añadir al carrito</button> <!-- Botón para añadir el producto al carrito -->
           </div>
         </div>
   
@@ -132,7 +132,7 @@
           <div class="info-product"> <!-- Contenedor para la información del producto -->
             <h2>Pepsi</h2> <!-- Nombre del producto 'Pepsi' -->
             <p class="price">$17</p> <!-- Precio del producto -->
-            <button class="btn-add-cart">Añadir al carrito</button>
+            <button class="btn-add-cart">Añadir al carrito</button> <!-- Botón para añadir el producto al carrito -->
           </div>
         </div>
   
@@ -155,7 +155,7 @@
           <div class="info-product"> <!-- Contenedor para la información del producto -->
             <h2>Fuzetea</h2> <!-- Nombre del producto 'Fuzetea' -->
             <p class="price">$20</p> <!-- Precio del producto -->
-            <button class="btn-add-cart">Añadir al carrito</button>
+            <button class="btn-add-cart">Añadir al carrito</button> <!-- Botón para añadir el producto al carrito -->
           </div>
         </div>
         <div class="item">
@@ -177,7 +177,7 @@
           <div class="info-product"> <!-- Contenedor para la información del producto -->
             <h2>Dr. Peper</h2> <!-- Nombre del producto 'Dr. Pepper' -->
             <p class="price">$19</p> <!-- Precio del producto -->
-            <button class="btn-add-cart">Añadir al carrito</button>
+            <button class="btn-add-cart">Añadir al carrito</button> <!-- Botón para añadir el producto al carrito -->
           </div>
         </div>
         <div class="item">
@@ -199,7 +199,7 @@
           <div class="info-product"> <!-- Contenedor para la información del producto -->
             <h2>CocaCola</h2> <!-- Nombre del producto 'Cocacola' -->
             <p class="price">$17</p> <!-- Precio del producto -->
-            <button class="btn-add-cart">Añadir al carrito</button>
+            <button class="btn-add-cart">Añadir al carrito</button> <!-- Botón para añadir el producto al carrito -->
           </div>
         </div>
       </div>
@@ -209,16 +209,17 @@
 </body>
 <br>
 
-<footer class="footer" id="mas">
-  <div class="container container-footer">
-    <div class="menu-footer">
-      <div class="contact-info">
+<footer class="footer" id="mas"> <!-- Footer de la página con clase "footer" y identificador "mas" -->
+  <div class="container container-footer"> <!-- Contenedor principal del footer con clase "container-footer" -->
+    <div class="menu-footer"> <!-- Menú del footer -->
+      <div class="contact-info"> <!-- Información de contacto -->
         <p class="title-footer">Información de Contacto</p>
         <ul>
           <li> Dirección:Av. Adolfo López Mateos #1801 Ote. Fracc. Bona Gens, C.P. 20255 Aguascalientes, Ags., México </li>
           
         </ul>
         <div class="social-icons">
+          <!-- Íconos de redes sociales -->
           <span class="facebook">
             <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
           </span>
