--- a/chuchesV.html
+++ b/chuchesV.html
@@ -23,7 +23,9 @@
       <div class="container-navbar"> <!-- Contenedor para la barra de navegación -->
         <nav class="navbar container"> <!-- Barra de navegación -->
           <div class="logo">
-            <img src="Imagenes/logo.jfif" alt="Nombre de tu empresa">
+            <a href="index.html">
+              <img src="Imagenes/logo.jfif" alt="Nombre de tu empresa">
+          </a>
 
           </div>
           <i class="fa-solid fa-bars" aria-hidden="true"></i> <!-- Icono de barras para el menú de navegación -->
