--- a/sodasV.html
+++ b/sodasV.html
@@ -21,7 +21,9 @@
       <div class="container-navbar"> <!-- Contenedor para la barra de navegación -->
         <nav class="navbar container"> <!-- Barra de navegación -->
           <div class="logo">
-            <img src="Imagenes/logo.jfif" alt="Nombre de tu empresa">
+            <a href="index.html">
+              <img src="Imagenes/logo.jfif" alt="Nombre de tu empresa">
+          </a>
 
           </div>
 
