--- a/sodasV.html
+++ b/sodasV.html
@@ -86,9 +86,9 @@
 
 <body>
   <div class="main">
-      <h1 class="heading-1" id="in"></h1>
+      <h1 class="heading-1" id="in">nnnnnn</h1>
       <br>
-      <br>
+      
       <h1 class="heading-1" id="sodas">SODAS</h1>
     
       <div class="container-items">
