--- a/chipsV.html
+++ b/chipsV.html
@@ -264,7 +264,7 @@
     </div>
     
     <div class="copyright">
-      <p> Desarrollado por Daniela Reyes y Dulce Marina; 2024 </p>
+      <p>&copy; Desarrollado por Daniela Reyes y Dulce Marina; 2024 </p>
       <img src="Imagenes/payment.png" alt="Pagos">
     </div>
   </div>
